<resources>
    <string name="app_name">Calculator</string>

    <string name="button_clear_all">AC</string>
    <string name="button_clear_entered">CE</string>
    <string name="button_equal">=</string>

    <string name="button_percent">%</string>
    <string name="button_divider">/</string>
    <string name="button_multiplier">*</string>
    <string name="button_minus">–</string>
    <string name="button_plus">+</string>


    <string name="button_numeric_one">1</string>
    <string name="button_numeric_two">2</string>
    <string name="button_numeric_three">3</string>
    <string name="button_numeric_four">4</string>
    <string name="button_numeric_five">5</string>
    <string name="button_numeric_six">6</string>
    <string name="button_numeric_seven">7</string>
    <string name="button_numeric_eight">8</string>
    <string name="button_numeric_nine">9</string>
    <string name="button_numeric_zero">0</string>
    <string name="button_plus_minus">+/–</string>
    <string name="button_dot">.</string>
</resources>
